--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             name="description"
             content="My portfolio"
     />
-    <script defer src="https://kit.fontawesome.com/a388be2306.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/841935366e.js" crossorigin="anonymous"></script>
     <title>Crystalize.dev</title>
   </head>
   <body>
